// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DefinitionList /> Default story renders snapshot 1`] = `
<dl
  class="definition-list"
>
  <div
    class="definition-list__item"
  >
    <dt
      class="definition-list-item__term"
    >
      Term 1:
    </dt>
    <dd
      class="definition-list-item__description"
    >
      Term 1 definition
    </dd>
  </div>
  <div
    class="definition-list__item"
  >
    <dt
      class="definition-list-item__term"
    >
      This is term 2:
    </dt>
    <dd
      class="definition-list-item__description"
    >
      This is term 2 definition
    </dd>
  </div>
</dl>
`;

exports[`<DefinitionList /> Horizontal story renders snapshot 1`] = `
<dl
  class="definition-list definition-list--horizontal"
>
  <div
    class="definition-list__item"
  >
    <dt
      class="definition-list-item__term"
    >
      Term 1:
    </dt>
    <dd
      class="definition-list-item__description"
    >
      Term 1 definition
    </dd>
  </div>
  <div
    class="definition-list__item"
  >
    <dt
      class="definition-list-item__term"
    >
      This is term 2:
    </dt>
    <dd
      class="definition-list-item__description"
    >
      This is term 2 definition
    </dd>
  </div>
</dl>
`;

exports[`<DefinitionList /> Small story renders snapshot 1`] = `
<dl
  class="definition-list definition-list--sm"
>
  <div
    class="definition-list__item"
  >
    <dt
      class="definition-list-item__term"
    >
      Term 1:
    </dt>
    <dd
      class="definition-list-item__description"
    >
      Term 1 definition
    </dd>
  </div>
  <div
    class="definition-list__item"
  >
    <dt
      class="definition-list-item__term"
    >
      This is term 2:
    </dt>
    <dd
      class="definition-list-item__description"
    >
      This is term 2 definition
    </dd>
  </div>
</dl>
`;
